--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -6,10 +6,33 @@
 	width: 100%;
 	transition: transform 0.4s ease-in-out, box-shadow 0.3s;
 	padding: 15px;
+
+	@media screen and (max-width: 1024px) {
+		padding: 0 0 0 3%;
+		height: 60px;
+		display: flex;
+		align-items: center;
+	}
+
+	&-container {
+		@media screen and (min-width: 1441px) {
+			max-width: 75vw;
+			margin: 0 auto;
+		}
+
+		@media screen and (max-width: 1440px) {
+			max-width: 1295px;
+			margin: 0 auto;
+		}
+
+		@media screen and (max-width: 1024px) {
+			margin: 0;
+			width: 100%;
+		}
+	}
 }
 
 .header-top {
-	max-width: 1295px;
 	@include childAlign(flex-end);
 
 	h1 {
@@ -19,11 +42,23 @@
 		text-align: right;
 		letter-spacing: -0.1px;
 	}
+
+	@media screen and (max-width: 1024px) {
+		display: none;
+	}
 }
 
 .header-primary {
 	@include childAlign(space-between);
 	padding: 26px 26px 4px;
+
+	@media screen and (max-width: 1440px) {
+		padding: 26px 0 4px;
+	}
+
+	@media screen and (max-width: 1024px) {
+		padding: 0 80px 0 0;
+	}
 
 	.header-nav {
 		display: flex;
@@ -48,6 +83,18 @@
 
 			&:hover {
 				transform: translateY(5px);
+			}
+
+			@media screen and (max-width: 1300px) {
+				max-height: 50px;
+			}
+
+			@media screen and (max-width: 1024px) {
+				max-height: 45px;
+			}
+
+			@media screen and (max-width: 650px) {
+				max-height: 40px;
 			}
 		}
 	}
@@ -114,7 +161,7 @@
 				}
 			}
 
-			& > .header-sous_menu {
+			& > .navbar_under-item {
 				opacity: 1;
 				transform: translateY(0px);
 				left: 0;
@@ -143,7 +190,7 @@
 
 	@media screen and (max-width: 1500px) {
 		font-size: 0.94rem;
-		max-width: 14rem;
+		max-width: 140px;
 		text-align: center;
 		padding: 9px 15px 8px !important;
 	}
@@ -174,6 +221,74 @@
 }
 
 .navbar_under-item {
+	transform: translateY(-10px);
+	margin-top: 25px;
 	position: absolute;
-	display: none;
+	display: block;
+	min-width: 210px;
+	left: 0;
+	box-shadow: 0 0 1rem 0 rgb(0 0 0 / 20%);
+	opacity: 0;
+	transition: 0.3s ease;
+}
+
+.trick {
+	position: absolute;
+	cursor: default;
+	left: 0;
+	width: 100%;
+	height: 22px;
+	bottom: -17px;
+	opacity: 0;
+	z-index: -1;
+	transform: translateX(-10px);
+
+	@media screen and (max-width: 1024px) {
+		position: relative;
+		width: 14px;
+		height: 24px;
+		z-index: 0;
+		background: $white;
+	}
+}
+
+// ---------------------------------- RESPONSIVE ---------------------------
+.nav-responsive {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.toggle-menu {
+	cursor: pointer;
+	width: 60px;
+	height: 60px;
+	background: $secondary-color;
+	color: white;
+	font-size: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	// transform: translate3d(0, 0, 0);
+
+	&-content {
+		// flex-direction: column;
+	}
+
+	&-lines {
+		width: 23px;
+		height: 13px;
+		margin-top: 0.2em;
+		margin-bottom: 0.4em;
+		stroke-width: 2px;
+		stroke: currentColor;
+	}
+
+	&-line {
+		display: block;
+		height: 1.6px;
+		background-color: currentColor;
+		content: '';
+		transform-origin: 50% 50%;
+	}
 }
